--- a/package.json
+++ b/package.json
@@ -7,13 +7,25 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "axios": "^0.26.0",
+    "datatables.net": "^1.11.5",
+    "datatables.net-dt": "^1.11.5",
     "devextreme": "21.2.5",
     "devextreme-react": "21.2.5",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-notifications": "^1.7.3",
+    "react-router": "^6.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sweetalert2": "^11.4.8",
+    "sweetalert2-react-content": "^4.2.0",
+    "typescript": "^4.6.3",
     "web-vitals": "^2.1.4",
     "webpack-dev-server": "^4.7.4"
   },
