--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "devextreme": "21.2.5",
     "devextreme-react": "21.2.5",
     "gh-pages": "^3.2.3",
-    "jquery": "^3.6.0",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-notifications": "^1.7.3",
